@@ -65,6 +65,9 @@
 
       \item The included version of \code{liblzma} has been updated to
       version 5.0.4, a minor bug-fix release.
+
+      \item New function \code{.bincode()}, a \sQuote{bare-bones}
+      versions of \code{cut.default(labels = FALSE)}.
     }
   }
 
